--- a/vendzoAPI/appsettings.json
+++ b/vendzoAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "emre1234-notverysecure-itneedstobelonger",
+    "Issuer": "vendzo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
